--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Personal site for Stanford journalism syllabi, tutorials, etc.",
   "main": "index.js",
   "dependencies": {
+    "eleventy-plugin-toc": "^1.0.1",
+    "markdown-it": "^8.4.2",
+    "markdown-it-anchor": "^5.0.2",
     "nunjucks": "^3.2.0"
   },
   "devDependencies": {
