--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Personal site for Stanford journalism syllabi, tutorials, etc.",
   "main": "index.js",
   "dependencies": {
-    "eleventy-plugin-toc": "^1.0.1",
+    "eleventy-plugin-nesting-toc": "^1.0.0",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.0.2",
     "nunjucks": "^3.2.0"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.7.1"
+    "@11ty/eleventy": "^0.8.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
