--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Personal site for Stanford journalism syllabi, tutorials, etc.",
   "main": "index.js",
   "dependencies": {
+    "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.2",
     "eleventy-plugin-nesting-toc": "^1.0.0",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.0.2",
